# AI_Astrolog

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bot/: config.py  keyboards.py  main.py  middlewares.py  states.py
bot/dashboard/: __init__.py  __main__.py  app.py
bot/handlers/: __init__.py  chart.py  common.py
bot/middlewares/: __init__.py  user_tracking.py
bot/services/: ai_interpreter.py  astrologer_api.py  chart_constants.py  chart_image.py  chart_patterns.py  chart_report.py  geocoding.py  kerykeion_chart.py  messaging.py  natal_bundle.py  natal_store.py  personality_format.py  usage_store.py
prompts/: AstrologEncryptionPromptExt.txt  AstrologEncryptionPromptExt_Claude.txt  astrolog_prof_ru.md  Промпт_Расшифровка_натальной_карты.md
scripts/: deploy.sh  server-setup.sh
