[project]
name = "ai-astrolog"
version = "0.1.0"
description = "Telegram bot — натальная карта (Kerykeion + Astrologer API)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.20,<4",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "kerykeion>=5.10",
    "geopy>=2.4",
    "timezonefinder>=6.5",
    "tzdata>=2024.1",
]

[project.scripts]
ai-astrolog = "bot.main:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*"]
